# plasma5-applets-plastweet

./: .gitignore  CMakeLists.txt  README.md
org.kde.plastweet/: metadata.desktop
package/: metadata.desktop
package/contents/config/: config.qml  main.xml
package/contents/ui/: main.qml
package/contents/ui/config/: ConfigGeneral.qml  ConfigNotifications.qml
plugin/: CMakeLists.txt  backend.cpp  backend.h  config.cpp  config.h  plasmoidplugin.cpp  plasmoidplugin.h  plastweet.cpp  plastweet.h  qmldir
src/: CMakeLists.txt  plastweet.notifyrc
src/package/: metadata.desktop
src/package/contents/code/: twitter.js
src/package/contents/config/: config.qml  main.xml
src/package/contents/ui/: main.qml
src/package/contents/ui/config/: ConfigGeneral.qml  ConfigNotifications.qml
src/plugin/: CMakeLists.txt  backend.cpp  backend.h  plastweet.cpp  qmldir
src/plugin/twitcurl/: HMAC_SHA1.cpp  base64.cpp  base64.h  twitcurl.cpp  twitcurl.h  twitcurlurls.h
src/translations/po/: org.kde.plastweet.po  org.kde.plastweet_en.po  org.kde.plastweet_es.po  org.kde.plastweet_es_ES.po  org.kde.plastweet_es_MX.po  org.kde.plastweet_nl.po
translations/: CMakeLists.txt
translations/po/: com.gustawho.plastweet.po  com.gustawho.plastweet_en.po  com.gustawho.plastweet_es_ES.po  com.gustawho.plastweet_es_MX.po  org.kde.plastweet.po  org.kde.plastweet_en.po  org.kde.plastweet_es_ES.po  org.kde.plastweet_es_MX.po  org.kde.plastweet_nl.po
